# CreatureBuilder

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: engineloader.cpp  engineloader.h  main.cpp  shapeModel.cpp  shapeModel.h
src/model/: creature_geometry.cpp  creature_geometry.h  creature_types.h
